✅ Pushed latest stable frontend + backend working version

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://AadeshPandey:mlproject001@clusterpratham.igubsyu.mongodb.net/?retryWrites=true&w=majority&appName=ClusterPratham
+
+# MONGO_DB=health_insurance_fraud
