--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+data/X.csv
+data/y.csv
+
+
+# Ignore Python cache files
+__pycache__/
+**/__pycache__/
+*.py[cod]
