--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-# Ignore large data files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 data/X.csv
 data/y.csv
 
@@ -7,5 +32,7 @@ data/y.csv
 __pycache__/
 **/__pycache__/
 *.py[cod]
+
+
 
 backend/data/X.csv
