--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -33,4 +34,5 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   }
+  
 }
